[gd_scene load_steps=3 format=3 uid="uid://bvnwjpd0f3oa0"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_jiv4u"]
[ext_resource type="Script" path="res://settings_bar.gd" id="2_g1i78"]

[node name="Multiplayer" type="Node"]
script = ExtResource("1_jiv4u")

[node name="Level" type="Node" parent="."]

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://level.tscn")
spawn_path = NodePath("../Level")
spawn_limit = 1

[node name="MainMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Net" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="HBoxContainer" parent="MainMenu/Net"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/Net/Options"]
layout_mode = 2
text = "Direct:"

[node name="Host" type="Button" parent="MainMenu/Net/Options"]
layout_mode = 2
text = "Host"

[node name="Connect" type="Button" parent="MainMenu/Net/Options"]
layout_mode = 2
text = "Connect"

[node name="Remote" type="LineEdit" parent="MainMenu/Net/Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "Remote Host"
caret_blink = true
caret_blink_interval = 0.5

[node name="SettingsBar" type="HBoxContainer" parent="MainMenu/Net"]
layout_mode = 2
script = ExtResource("2_g1i78")

[node name="Username" type="LineEdit" parent="MainMenu/Net/SettingsBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
placeholder_text = "Enter a username..."

[node name="CameraType" type="OptionButton" parent="MainMenu/Net/SettingsBar"]
layout_mode = 2
item_count = 2
popup/item_0/text = "Orbit"
popup/item_0/id = 0
popup/item_1/text = "Free"
popup/item_1/id = 1

[node name="TouchToggle" type="CheckButton" parent="MainMenu/Net/SettingsBar"]
layout_mode = 2
text = "Touch Controls"

[node name="SensitivityBox" type="VBoxContainer" parent="MainMenu/Net/SettingsBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SensitivityLabel" type="Label" parent="MainMenu/Net/SettingsBar/SensitivityBox"]
layout_mode = 2
text = "Rotational sensitivity"

[node name="Sensitivity" type="SpinBox" parent="MainMenu/Net/SettingsBar/SensitivityBox"]
layout_mode = 2
max_value = 5.0
step = 0.0
allow_greater = true
alignment = 1
prefix = "Sensitivity:"
custom_arrow_step = 0.125

[node name="Save" type="Button" parent="MainMenu/Net/SettingsBar"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="MainMenu/Net/SettingsBar"]
layout_mode = 2
text = "Load"

[connection signal="pressed" from="MainMenu/Net/Options/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainMenu/Net/Options/Connect" to="." method="_on_connect_pressed"]
[connection signal="text_changed" from="MainMenu/Net/SettingsBar/Username" to="MainMenu/Net/SettingsBar" method="_on_username_text_changed"]
[connection signal="item_selected" from="MainMenu/Net/SettingsBar/CameraType" to="MainMenu/Net/SettingsBar" method="_on_option_button_item_selected"]
[connection signal="toggled" from="MainMenu/Net/SettingsBar/TouchToggle" to="MainMenu/Net/SettingsBar" method="_on_touch_toggle_toggled"]
[connection signal="value_changed" from="MainMenu/Net/SettingsBar/SensitivityBox/Sensitivity" to="MainMenu/Net/SettingsBar" method="_on_sensitivity_value_changed"]
[connection signal="button_up" from="MainMenu/Net/SettingsBar/Save" to="MainMenu/Net/SettingsBar" method="_on_save_button_up"]
[connection signal="button_up" from="MainMenu/Net/SettingsBar/Load" to="MainMenu/Net/SettingsBar" method="_on_load_button_up"]
